# polarcap

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  codecov.yml  example_scan_pcap.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: pcap_parsing.rs
docs/: README.md
polarcap-core/: Cargo.toml
polarcap-core/src/: lib.rs  parser.rs
python/polarcap/: __init__.py
src/: lib.rs  parser.rs
tests/: conftest.py  example.pcap  generate_test_pcap.py  test_basic.py
