[package]
name = "polarcap"
version = "0.1.0"
edition = "2021"
authors = ["Mark Assad <markassad@users.noreply.github.com>"]
description = "A Polars interface to pcap (Packet Capture) data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/markassad/polarcap"
readme = "README.md"

[lib]
name = "polarcap"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
polars = { version = "0.52", features = ["lazy", "timezones"] }
arrow = { version = "57.1.0", default-features = true }
pcap-parser = "0.17"

[dev-dependencies]
criterion = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[[bench]]
name = "pcap_parsing"
harness = false
