[workspace]
members = ["polarcap-core"]
resolver = "2"

[package]
name = "polarcap"
version = "0.1.0"
edition = "2021"
authors = ["Mark Assad <markassad@users.noreply.github.com>"]
description = "A Polars interface to pcap (Packet Capture) data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/markassad/polarcap"
readme = "README.md"

[lib]
name = "polarcap"
crate-type = ["cdylib"]

[dependencies]
polarcap-core = { path = "polarcap-core" }
pyo3 = { version = "0.27", features = ["extension-module"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[[bench]]
name = "pcap_parsing"
harness = false
path = "polarcap-core/benches/pcap_parsing.rs"
