[workspace]
members = ["polarcap-core"]
resolver = "2"

[package]
authors = ["Mark Assad <massad@gmail.com>"]
description = "A Polars interface to pcap (Packet Capture) data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/markassad/polarcap"
readme = "README.md"
name = "polarcap"
edition = "2021"
version = "0.1.0"

[lib]
name = "polarcap"
crate-type = ["cdylib"]

[dependencies]
polarcap-core = { path = "polarcap-core" }
polars = { version = "0.52.0", default-features = false }
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-polars = { version = "0.25.0", features = ["derive", "lazy"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
